Adding CHANGELOG, enscribe, gr-j2497 flow graphs, changing Archive address

--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -105,8 +105,7 @@
                     
                     <div class="Box-body px-5 pb-5">
                       <article id="grip-content" class="markdown-body entry-content container-lg">
-                        <h1>
-<a id="user-content-third-party-software" class="anchor" href="#third-party-software" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Third-Party Software</h1>
+                        <h1><a id="user-content-third-party-software" class="anchor" aria-hidden="true" href="#third-party-software"><span aria-hidden="true" class="octicon octicon-link"></span></a>Third-Party Software</h1>
 <p>The following is a table of the major software tools that have been proven to work for each supported operating system.</p>
 <table>
 <thead>
@@ -195,6 +194,15 @@
 </tr>
 <tr>
 <td>Dump1090</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
+<td>Enscribe</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -1014,8 +1022,7 @@
 </tr>
 </tbody>
 </table>
-<h2>
-<a id="user-content-third-party-software-versions" class="anchor" href="#third-party-software-versions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Third-Party Software Versions</h2>
+<h2><a id="user-content-third-party-software-versions" class="anchor" aria-hidden="true" href="#third-party-software-versions"><span aria-hidden="true" class="octicon octicon-link"></span></a>Third-Party Software Versions</h2>
 <p>The following are the software versions that are included with the FISSURE installer for each supported operating system.</p>
 <ol>
 <li><a href="#ubuntu_18_04">Ubuntu 18.04</a></li>
@@ -1026,8 +1033,7 @@
 <li><a href="#ubuntu_22_04">Ubuntu 22.04</a></li>
 </ol>
 <div id="user-content-ubuntu_18_04"></div> 
-<h3>
-<a id="user-content-ubuntu-1804" class="anchor" href="#ubuntu-1804" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04</h3>
+<h3><a id="user-content-ubuntu-1804" class="anchor" aria-hidden="true" href="#ubuntu-1804"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04</h3>
 <table>
 <thead>
 <tr>
@@ -1091,6 +1097,12 @@
 <td>1.10.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td>ESP32 Bluetooth Classic Sniffer</td>
@@ -1635,8 +1647,7 @@
 </tbody>
 </table>
 <div id="user-content-ubuntu_18_04_5"></div> 
-<h3>
-<a id="user-content-ubuntu-18045" class="anchor" href="#ubuntu-18045" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04.5</h3>
+<h3><a id="user-content-ubuntu-18045" class="anchor" aria-hidden="true" href="#ubuntu-18045"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04.5</h3>
 <table>
 <thead>
 <tr>
@@ -1700,6 +1711,12 @@
 <td>1.10.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td>ESP32 Bluetooth Classic Sniffer</td>
@@ -2244,8 +2261,7 @@
 </tbody>
 </table>
 <div id="user-content-ubuntu_18_04_6"></div> 
-<h3>
-<a id="user-content-ubuntu-18046" class="anchor" href="#ubuntu-18046" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04.6</h3>
+<h3><a id="user-content-ubuntu-18046" class="anchor" aria-hidden="true" href="#ubuntu-18046"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04.6</h3>
 <table>
 <thead>
 <tr>
@@ -2309,6 +2325,12 @@
 <td>1.10.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td>ESP32 Bluetooth Classic Sniffer</td>
@@ -2853,8 +2875,7 @@
 </tbody>
 </table>
 <div id="user-content-ubuntu_20_04_1"></div>  
-<h3>
-<a id="user-content-ubuntu-20041" class="anchor" href="#ubuntu-20041" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 20.04.1</h3>
+<h3><a id="user-content-ubuntu-20041" class="anchor" aria-hidden="true" href="#ubuntu-20041"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 20.04.1</h3>
 <table>
 <thead>
 <tr>
@@ -2918,6 +2939,12 @@
 <td>1.010.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td><del>ESP32 Bluetooth Classic Sniffer</del></td>
@@ -3463,8 +3490,7 @@
 </tbody>
 </table>
 <div id="user-content-ubuntu_20_04_4"></div>  
-<h3>
-<a id="user-content-ubuntu-20044" class="anchor" href="#ubuntu-20044" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 20.04.4</h3>
+<h3><a id="user-content-ubuntu-20044" class="anchor" aria-hidden="true" href="#ubuntu-20044"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 20.04.4</h3>
 <table>
 <thead>
 <tr>
@@ -3528,6 +3554,12 @@
 <td>1.010.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td><del>ESP32 Bluetooth Classic Sniffer</del></td>
@@ -4073,8 +4105,7 @@
 </tbody>
 </table>
 <div id="user-content-ubuntu_22_04"></div> 
-<h3>
-<a id="user-content-ubuntu-2204" class="anchor" href="#ubuntu-2204" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 22.04</h3>
+<h3><a id="user-content-ubuntu-2204" class="anchor" aria-hidden="true" href="#ubuntu-2204"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 22.04</h3>
 <table>
 <thead>
 <tr>
@@ -4138,6 +4169,12 @@
 <td>1.010.3010.14</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a></td>
+</tr>
+<tr>
+<td>Enscribe</td>
+<td>0.1.0</td>
+<td align="center">No</td>
+<td>Jason Downer</td>
 </tr>
 <tr>
 <td><del>ESP32 Bluetooth Classic Sniffer</del></td>
@@ -4682,8 +4719,7 @@
 </tr>
 </tbody>
 </table>
-<h1>
-<a id="user-content-known-conflicts" class="anchor" href="#known-conflicts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Conflicts</h1>
+<h1><a id="user-content-known-conflicts" class="anchor" aria-hidden="true" href="#known-conflicts"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Conflicts</h1>
 <p>The following are a list of known software conflicts and incompatibilities within FISSURE:</p>
 <ul>
 <li>
