LTE-ciphercheck, spectrum poster, small fixes

--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -643,6 +643,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>LTE-ciphercheck</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+</tr>
+<tr>
 <td>Metasploit</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -1393,6 +1402,12 @@
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
 </tr>
 <tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
+</tr>
+<tr>
 <td>Metasploit</td>
 <td>v6.2.4-dev-</td>
 <td align="center">Yes</td>
@@ -2005,6 +2020,12 @@
 <td>master/1.1.0</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
+</tr>
+<tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
 </tr>
 <tr>
 <td>Metasploit</td>
@@ -2621,6 +2642,12 @@
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
 </tr>
 <tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
+</tr>
+<tr>
 <td>Metasploit</td>
 <td>6.2.10-dev-</td>
 <td align="center">Yes</td>
@@ -3233,6 +3260,12 @@
 <td>master/1.1.0</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
+</tr>
+<tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
 </tr>
 <tr>
 <td>Metasploit</td>
@@ -3850,6 +3883,12 @@
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
 </tr>
 <tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
+</tr>
+<tr>
 <td>Metasploit</td>
 <td>v6.1.44-dev-</td>
 <td align="center">Yes</td>
@@ -4463,6 +4502,12 @@
 <td>master/1.1.0</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/JiaoXianjun/LTE-Cell-Scanner">https://github.com/JiaoXianjun/LTE-Cell-Scanner</a></td>
+</tr>
+<tr>
+<td>LTE-ciphercheck</td>
+<td>rebase_20.04</td>
+<td align="center">Yes</td>
+<td><a href="https://github.com/mrlnc/LTE-ciphercheck">https://github.com/mrlnc/LTE-ciphercheck</a></td>
 </tr>
 <tr>
 <td><del>Metasploit</del></td>
