--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -1087,7 +1087,7 @@
 <td>Bless</td>
 <td>0.6.0</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td>hhttps://github.com/afrantzis/bless</td>
 </tr>
 <tr>
 <td>btscanner</td>
@@ -1707,7 +1707,7 @@
 <td>Bless</td>
 <td>0.6.0</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td><a href="https://github.com/afrantzis/bless">https://github.com/afrantzis/bless</a></td>
 </tr>
 <tr>
 <td>btscanner</td>
@@ -2327,7 +2327,7 @@
 <td>Bless</td>
 <td>0.6.0</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td><a href="https://github.com/afrantzis/bless">https://github.com/afrantzis/bless</a></td>
 </tr>
 <tr>
 <td>btscanner</td>
@@ -2947,7 +2947,7 @@
 <td>Bless</td>
 <td>0.6.0</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td><a href="https://github.com/afrantzis/bless">https://github.com/afrantzis/bless</a></td>
 </tr>
 <tr>
 <td>btscanner</td>
@@ -3568,7 +3568,7 @@
 <td>Bless</td>
 <td>0.6.0</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td><a href="https://github.com/afrantzis/bless">https://github.com/afrantzis/bless</a></td>
 </tr>
 <tr>
 <td>btscanner</td>
@@ -4189,7 +4189,7 @@
 <td>Bless</td>
 <td>0.6.3</td>
 <td align="center">No</td>
-<td><a href="https://www.thinkpenguin.com/gnu-linux/bless-hex-editor" rel="nofollow">https://www.thinkpenguin.com/gnu-linux/bless-hex-editor</a></td>
+<td><a href="https://github.com/afrantzis/bless">https://github.com/afrantzis/bless</a></td>
 </tr>
 <tr>
 <td>btscanner</td>
