KDE neon and ESP32 Bluetooth Classic Sniffer

--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -215,9 +215,9 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
-<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
-<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
-<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
 <td>ESP8266 Deauther v2</td>
@@ -1058,6 +1058,7 @@
 <li><a href="#ubuntu_20_04_1">Ubuntu 20.04.1</a></li>
 <li><a href="#ubuntu_20_04_4">Ubuntu 20.04.4</a></li>
 <li><a href="#ubuntu_22_04">Ubuntu 22.04</a></li>
+<li><a href="#ubuntu_20_04_4">KDE neon 5.25</a></li>
 </ol>
 <div id="user-content-ubuntu_18_04"></div> 
 <h3><a id="user-content-ubuntu-1804" class="anchor" aria-hidden="true" href="#ubuntu-1804"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 18.04</h3>
@@ -3016,7 +3017,7 @@
 <td>Jason Downer</td>
 </tr>
 <tr>
-<td><del>ESP32 Bluetooth Classic Sniffer</del></td>
+<td>ESP32 Bluetooth Classic Sniffer</td>
 <td>master</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer">https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer</a></td>
@@ -3649,7 +3650,7 @@
 <td>Jason Downer</td>
 </tr>
 <tr>
-<td><del>ESP32 Bluetooth Classic Sniffer</del></td>
+<td>ESP32 Bluetooth Classic Sniffer</td>
 <td>master</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer">https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer</a></td>
@@ -4282,7 +4283,7 @@
 <td>Jason Downer</td>
 </tr>
 <tr>
-<td><del>ESP32 Bluetooth Classic Sniffer</del></td>
+<td>ESP32 Bluetooth Classic Sniffer</td>
 <td>master</td>
 <td align="center">Yes</td>
 <td><a href="https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer">https://github.com/Matheus-Garbelini/esp32_bluetooth_classic_sniffer</a></td>
