Inspection file source flow graphs

--- a/Help/About.html
+++ b/Help/About.html
@@ -394,6 +394,10 @@ License (GPL-2.0): <a href="https://github.com/Proxmark/proxmark3/blob/master/LI
 Project: <a href="https://www.putty.org/" rel="nofollow">https://www.putty.org/</a><br>
 Copyright 1997-2022 Simon Tatham<br>
 License (MIT): <a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/licence.html" rel="nofollow">https://www.chiark.greenend.org.uk/~sgtatham/putty/licence.html</a></p>
+<p><strong>pyFDA</strong><br>
+Project: <a href="https://github.com/chipmuenk/pyfda">https://github.com/chipmuenk/pyfda</a><br>
+Copyright 2013-2021 pyFDA Development Team and others<br>
+License (MIT): <a href="https://github.com/chipmuenk/pyfda/blob/develop/LICENSE.md">https://github.com/chipmuenk/pyfda/blob/develop/LICENSE.md</a></p>
 <p><strong>PyGPSClient</strong><br>
 Project: <a href="https://github.com/semuconsulting/PyGPSClient">https://github.com/semuconsulting/PyGPSClient</a><br>
 Copyright 2020, SEMU Consulting<br>
