--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -805,6 +805,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>pyFDA</td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>PyGPSClient</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -3513,6 +3522,12 @@
 <td><a href="https://www.putty.org/" rel="nofollow">https://www.putty.org/</a></td>
 </tr>
 <tr>
+<td>pyFDA</td>
+<td>0.7.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/chipmuenk/pyfda">https://github.com/chipmuenk/pyfda</a></td>
+</tr>
+<tr>
 <td>PyGPSClient</td>
 <td>1.3.5</td>
 <td align="center">No</td>
@@ -4176,6 +4191,12 @@
 <td><a href="https://www.putty.org/" rel="nofollow">https://www.putty.org/</a></td>
 </tr>
 <tr>
+<td>pyFDA</td>
+<td>0.7.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/chipmuenk/pyfda">https://github.com/chipmuenk/pyfda</a></td>
+</tr>
+<tr>
 <td>PyGPSClient</td>
 <td>1.3.5</td>
 <td align="center">No</td>
@@ -4837,6 +4858,12 @@
 <td>0.76</td>
 <td align="center">No</td>
 <td><a href="https://www.putty.org/" rel="nofollow">https://www.putty.org/</a></td>
+</tr>
+<tr>
+<td>pyFDA</td>
+<td>0.7.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/chipmuenk/pyfda">https://github.com/chipmuenk/pyfda</a></td>
 </tr>
 <tr>
 <td>PyGPSClient</td>
