Creating bootable USBs, copying FM attacks, README updates

--- a/Help/ModifyingDashboard.html
+++ b/Help/ModifyingDashboard.html
@@ -116,6 +116,7 @@
 <h2><a id="user-content-qtdesigner" class="anchor" aria-hidden="true" href="#qtdesigner"><span aria-hidden="true" class="octicon octicon-link"></span></a>QtDesigner</h2>
 <div id="user-content-qtdesigner"></div> 
 <p>Launch QtDesigner with the <code>designer</code> command and open the <em>FISSURE/UI/dashboard.ui</em> file.</p>
+<p><a target="_blank" rel="noopener noreferrer" href="./Images/qtdesigner.png"><img src="./Images/qtdesigner.png" alt="qtdesigner" style="max-width: 100%;"></a></p>
 <h3><a id="user-content-creating-new-widgets" class="anchor" aria-hidden="true" href="#creating-new-widgets"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating New Widgets</h3>
 <p>Frequently used widgets:</p>
 <ul>
