Creating bootable USBs, copying FM attacks, README updates

--- a/Help/SoftwareAndConflicts.html
+++ b/Help/SoftwareAndConflicts.html
@@ -658,7 +658,7 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
-<td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
 <td>libbtbb</td>
@@ -4757,8 +4757,8 @@
 <td><a href="https://github.com/steve-m/kalibrate-rtl">https://github.com/steve-m/kalibrate-rtl</a></td>
 </tr>
 <tr>
-<td><del>Kismet</del></td>
-<td>Kismet 2016-07-R1</td>
+<td>Kismet</td>
+<td>latest</td>
 <td align="center">No</td>
 <td><a href="https://www.kismetwireless.net/" rel="nofollow">https://www.kismetwireless.net/</a></td>
 </tr>
