Adding Dire Wolf, gr-mixalot, systemback, guidus

--- a/Help/HTML/AddingCustomOptions.html
+++ b/Help/HTML/AddingCustomOptions.html
@@ -108,7 +108,7 @@
                         <h1><a id="user-content-adding-custom-options" class="anchor" aria-hidden="true" href="#adding-custom-options"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adding Custom Options</h1>
 <h2><a id="user-content-options-dialog" class="anchor" aria-hidden="true" href="#options-dialog"><span aria-hidden="true" class="octicon octicon-link"></span></a>Options Dialog</h2>
 <p>Bring up the options dialog in Qt Designer using the <code>designer</code> command and then open the <em>FISSURE/UI/options.ui</em> file. Click the arrows for the stacked widget (top right) to locate the table where the custom option will be inserted. Double-click on the table and add a new row with the name of the variable. Set the font size to match the other rows with the "Properties&lt;&lt;" button.</p>
-<p><a target="_blank" rel="noopener noreferrer" href="./Images/options.png"><img src="./Images/options.png" alt="options" style="max-width: 100%;"></a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="../Images/options.png"><img src="../Images/options.png" alt="options" style="max-width: 100%;"></a></p>
 <h2><a id="user-content-defaultyaml" class="anchor" aria-hidden="true" href="#defaultyaml"><span aria-hidden="true" class="octicon octicon-link"></span></a>default.yaml</h2>
 <p>Open <em>FISSURE/YAML/User Configs/default.yaml</em> and insert the variable name and value (fft_size: 4096) for the new option.</p>
 <h2><a id="user-content-dashboardpy" class="anchor" aria-hidden="true" href="#dashboardpy"><span aria-hidden="true" class="octicon octicon-link"></span></a>dashboard.py</h2>
